New in svn version:

  * SCAN functional with libxc v.3; bands with meta-GGA can be computed
   (Davide Ceresoli)

Fixed in svn version

  * Examples for magnetic anisotropy with force theorem were not properly
    updated (r13534)

  * Orthogonalization of Hubbard manifold in LDA+U with non-default values
    of U_projection_type was not properly done in v.6.0 and 6.1 (r13529)
    Thanks to Andrea Ferretti and Mike Atambo for fixing this.

  * Bug in parallel FFT when task groups are used and the number of XY planes 
    is not a multiple of the number of MPI tasks and of task groups (r13489)

  * Born effective charges with "Zeu" method were not correctly computed 
    when both GGA and core corrections were present (r13474 and r13481).
    Thanks to Vineet Kumar Pandey for reporting the problem.

  * reset_grid wasn't resetting grid properly if k1,k2,k3=0. Thanks to
    Giuliana Barbarino (r13462)

  * EXX in noncolinear/spin-orbit case wasn't correct (r13453)

  * Fixed a small bug in two subroutines only called by Environ (r13451)

  * Out-of-bounds error in hybrid functionals with LSDA, Gamma tricks and
    2 pools (r13448)

  * EPW: in v.6.1 there was a mismatch between symmetry operations in PW
    and in EPW. It affected results of v.6.1 only in the presence of
    fractional translations incommensurate with the FFT grid. (r13443)

  * FFTXlib: the case in which the smooth and dense grids have the same FFT
    dimensions along x and y but different along z was incorrectly treated,
    leading to strange error messages. (r13439 and r13445)

  * There was a small inconsistency in the vdW-DF kernel generating routine
    "generate_vdW_kernel_table.f90", not affecting in any significant way 
    the results. It is anyway recommended to re-generate the kernel file.
    Thanks to C.Y. Ren for noticing this. (r13438)

Incompatible changes in svn version:

  * module pwcom no longer contains modules gvect, gvecs, references to