@@ -10,16 +10,6 @@ are automatically generated by "configure".
    automatically generated by configure using include/configure.h.in
    as template - contains compilation info, used in initial printout
 
-* include/fft_defs.h
-  ==================
-   automatically generated by configure using include/fft_defs.h.in
-   as template - included in Modules/fft_scalar.f90
-   contains the type for C pointers called by fortran:
-      C_POINTER is integer*8 for 64-bit machines,
-                   integer*4 on most other machines
-   DO NOT add C-style comments! some fortran compilers do not like them
-   OBSOLESCENT: to be replaced by ISO C binding definitions
-
 * include/c_defs.h
   ================
    automatically generated by configure using include/c_defs.h.in
