@@ -30,7 +30,7 @@ if ! test -f ${ESPRESSO_PSEUDO}/${pp_file} ; then
 	#echo -n "Downloading ${pp_file} to ${ESPRESSO_PSEUDO} ... "
 	${DOWNLOADER} ${ESPRESSO_PSEUDO}/${pp_file} ${NETWORK_PSEUDO}/${pp_file} 2> /dev/null
 	if test $? != 0 ; then 
-		echo "FAILED, do it manually -- Testing aborted!"
+		echo "Download of" ${pp_file} "FAILED, do it manually -- Testing aborted!"
 		exit -1
 	#else
 		#echo "done."
